# lolcatplusplus

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
scripts/: install.ps1  install.sh
src/: args.cpp  args.hpp  rainbow.cpp  rainbow.hpp  terminal.hpp  version.hpp.in
